src/test/error/1706620021442_10.dot
digraph G {
subgraph cluster_0 {
92
65
56
64
45
33
61
72
26
67
45
100
}
subgraph cluster_1 {
79
4
20
36
92
101
}
subgraph cluster_2 {
33
102
}
subgraph cluster_3 {
53
83
27
23
16
23
45
103
}
subgraph cluster_4 {
66
73
96
71
49
88
4
16
9
15
77
13
104
}
subgraph cluster_5 {
39
37
57
29
8
43
39
51
65
86
105
}
subgraph cluster_6 {
54
32
1
34
106
}
subgraph cluster_7 {
57
27
83
35
107
}
subgraph cluster_8 {
48
88
7
15
27
28
56
19
94
58
70
108
}
subgraph cluster_9 {
96
44
48
13
1
7
24
42
109
}
subgraph cluster_10 {
26
25
18
47
75
71
110
}
subgraph cluster_11 {
96
89
0
16
61
111
}
subgraph cluster_12 {
37
112
}
subgraph cluster_13 {
82
113
}
subgraph cluster_14 {
63
39
85
80
73
71
31
31
59
11
26
93
114
}
13->1
96->12
45->93
4->79
66->53
43->6
54->77
42->36
57->40
55->3
82->30
38->67
21->42
51->20
14->84
21->56
88->59
17->75
11->57
17->85
57->55
96->63
12->36
64->76
49->39
28->3
80->13
44->30
12->73
71->17
10->46
51->69
2->67
67->52
98->58
34->53
80->44
76->19
87->94
11->95
10->36
96->71
77->90
64->49
41->0
47->28
10->44
80->59
87->8
90->0
35->45
82->29
47->90
9->61
33->18
79->61
8->73
27->43
14->31
90->45
71->67
11->99
51->31
7->27
83->9
82->17
24->61
46->82
34->70
33->75
97->12
43->51
79->40
42->27
74->96
49->34
11->5
7->16
60->61
25->60
}
